tests/ui/type_checker/invalid/invalid_set_type.aru
func main() {
    let mut x: int = 10
    x = "hello"
}
